<resources>

    <string name="app_name">CleverConnectivity Ads</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">CleverConnectivity Ads</string>
    <string name="toggle_data">Data Connection</string>
    <string name="toggle_data_desc">Enable or disable data (3G) connection. You can also enable/disable data outside this application, there won\'t be any conflitcts</string>
    <string name="toggle_data_manager">Data Manager</string>
    <string name="toggle_data_manager_desc">Data Manager will automatically turn on/off data connection after a defined period of time when screen is OFF. Connection will be disabled ONLY if it NOT used. Therefore,  downloads/streaming won\'t be stopped and sync events will be received. Data Mananger will work ONLY if data is activated</string>
    <string name="toggle_wifi">Wifi Connection</string>
    <string name="toggle_wifi_desc">Enable or disable wifi connection. You can also enable/disable wifi outside this application, there won\'t be any conflitcts</string>
    <string name="toggle_wifi_manager">Wifi Manager</string>
    <string name="toggle_wifi_manager_desc">Wifi Manager will automatically turn on/off wifi connection after a defined period of time when screen is OFF. Connection will be disabled ONLY if it NOT used. Therefore,  downloads/streaming won\'t be stopped and sync events will be received. Wifi Mananger will work ONLY if wifi is activated</string>
    <string name="toggle_auto_sync">Auto-Sync</string>
    <string name="toggle_auto_sync_manager">Auto-Sync Manager</string>
    <string name="toggle_auto_sync_manager_desc">Auto-Sync Manager will automatically turn off all syncs when there are no connection while screen is OFF. Sync will resume once connections are re-enabled or screen is turned ON. Auto-Sync Mananger will work ONLY if Auto-Sync is activated</string>
    <string name="toggle_auto_sync_desc">Enable or disable synchronizing. You can also enable/disable wifi outside this application, there won\'t be any conflitcts</string>
    <string name="toggle_auto_wifi_off">Auto-Wifi Off</string>
    <string name="toggle_auto_wifi_off_desc">Auto-Wifi Off will automatically disable wifi after after a defined period if screen is OFF and no known networks are available</string>
    <string name="toggle_auto_wifi_on">Auto-Wifi On</string>
    <string name="toggle_auto_wifi_on_desc">Auto-Wifi On will automatically enable wifi after after a defined period if wifi is disabled and known networks are available</string>
    <string name="time_on">Time On (min)</string>
    <string name="time_on_desc">Number of minutes where data connectivity is ON when screen is shutdown</string>
    <string name="time_on_check">Time On Next Check (min)</string>
    <string name="time_on_check_desc">Number of minutes where data connectivity is kept ON after a positive data usage test done when TIME ON has expired. After this delay, an another data usage test will be executed. If data is used, this timer will restart, else time off will kick in</string>
    <string name="time_off">Time Off (min)</string>
    <string name="time_off_desc">Number of minutes where data connectivity is OFF when screen is shutdown</string>
    <string name="interval_check">Usage check interval (s)</string>
    <string name="interval_check_desc">Number of seconds where the application will check is  data connections (Wifi/3G) are used. A greater value will decrease the chance of interrupting downloads/streaming/syncing but will keep connections alived for longer and thus consume more battery</string>
    <string name="button_save">Save preferences</string>
    <string name="toggle_sleep_hours">Sleep Hours</string>
    <string name="toggle_sleep_hours_desc">During sleep hours all data connections will be deactivated when screen is OFF</string>
    <string name="label_sleep_hours">Sleep Hours :</string>
    <string name="button_change_sleep_hours">Edit</string>
    <string name="label_time_on">Time On(min)</string>
    <string name="label_time_off">Time Off(min)</string>
    <string name="label_time_Interval">Interval Check(sec)</string>
    <string name="label_sleep_off">Connectivity off</string>
    <string name="label_sleep_off_desc">All connectivity (3G/Wifi/Sync) will be turn off at this specific time. The ON-OFF cycle will be stopped. Connections will be automatically disabled only when screen is off</string>
    <string name="label_sleep_on">Connectivity on</string>
    <string name="label_sleep_on_desc">The ON-OFF cycle will be resumed at this specific time.</string>
    <string name="button_save_sleep_hours">Save sleep hours</string>
    <string name="SleepHoursActivityName">Change sleep hours</string>
    <string name="developerName">© gyagapen</string>
    <string name="report_bug">Report a bug</string>
    <string name="view_log_file">View log file</string>
    <string name="view_log_details">Generate a log named "CleverConnectivity.log" at the root of the external storage and then display it. You must have a text viewer in order to read these logs</string>
    <string name="deactivate_service">Deactivate CleverConnectivity</string>
    <string name="deactivate_service_desc">This will stop the main service of the application e.g all features of the app. It\'s like the app is uninstalled.</string>
    <string name="deactivate_service_plugged">Deactivate while plugged</string>
    <string name="deactivate_service__plugged_desc">This will stop the main service of the application e.g all features of the app only when the phone is PLUGGED.</string>
    <string name="screen_on_delay">Screen On Connectivity Delay (s)</string>
    <string name="screen_on_delay_desc">When screen is turned ON, connectivity will be re-enabled after this delay (in seconds). If the screen is turned off before the delay expires, the ON-OFF cycle will continue as normal. For example, this will allow to answer calls without disturbing the ON-OFF cycle</string>
    <string name="advanced">Advanced</string>
    <string name="cbox_diff_first_time_on">Differentiate first Time On</string>
    <string name="first_time_on">First Time On</string>
    <string name="first_time_on_desc">When the screen is just turned off, this timer will kick in instead of the regular Time On. But after expiration of Time Off, it\'s still the regular Time On that will be taken into consideration. </string>
    <string name="general_title">General</string>
    <string name="data_title">Data</string>
    <string name="wifi_title">Wifi</string>
    <string name="sync_title">Sync</string>
    <string name="sleep_title">Sleep mode</string>
    <string name="timers_title">Timers</string>
    <string name="switch2G">2G When Screen Off</string>
    <string name="switch_desc2G">The preferred network mode will be set when screen is OFF. When screen will be turned on, 3G mode will be re-enabled. Kindly note, if you set the preferred network to 2G in settings, it won\'t override it</string>
    <string name="switch_incompatible2G">Sorry, you have to be on CYANOGENMOD based rom to unlock this feature</string>
    <string name="button_create_activation_shortcut">Create (De)Activation Shortcut</string>
    <string name="shortcut_activation_name">(De)Activate</string>
    <string name="button_manage_app">Manage connectivity per app</string>
    <string name="mgr_app_conn_master_switch">Master Switch</string>
    <string name="mgr_app_conn_desc">When one of selected application is running, connecitivty won\'t be disabled</string>
    <string name="check_net_conn_wifi">Check Internet Connection</string>
    <string name="check_net_conn_wifi_desc">Checks wether the phone is able to connect to internet via the wifi connection. If it not the case, wifi is disabled.</string>
    <string name="keyguard_off">Connectivity On after lockscreen</string>
    <string name="keyguard_off_desc">Connectivity will be re-enabled when the lockscreen is removed by the user (instead of re-activating connectivity when screen is turned on)</string>
    <string name="logs_off">Deactivate Logs file generation</string>
    <string name="bluetooth_tab">Bluetooth</string>
    <string name="bluetooth_off_sleep_mode">Bluetooth off during sleep</string>
    <string name="bluetooth_off_sleep_mode_desc">If bluetooth is on, it will be  deactivated during sleep hours. It will re-activated when sleep mode is finished  </string>
    <string name="notification">Activate Notification</string>
    <string name="notification_desc">Display a fancy notification in the notification when the application is started</string>
    <string name="battery_level">Sleep mode when battery &lt;= </string>
    <string name="battery_level_desc">Sleep mode will be automatically triggered when battery level is less or equal than the specied value</string>
    <string name="percentage">%</string>
    <string name="notif_running">Running</string>
    <string name="notif_bat_low">Battery Low</string>
    <string name="notif_sleep_on">Sleep Mode ON</string>
    <string name="notif_sleep_off">Sleep Mode OFF</string>
    <string name="data_off_when_wifi">Data Off When Wifi</string>
    <string name="data_off_when_wifi_warn_title">Warning</string>
    <string name="data_off_when_wifi_desc">Disable data connectivity when the phone is connected to a Wifi network</string>
    <string name="data_off_when_wifi_warn">Once ticked, you will have to control the data mobile state (ON/OFF) from this app, it will take over precedence from other toggles</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <string name="adId">ca-app-pub-4662434208516595/7442825666</string>
    <string name="bannerId">ca-app-pub-4662434208516595/9490979664</string>

    <color name="separator">#B2E0FF</color>
    <color name="name">#666699</color>

    <!--
    <drawable name="advanced.png"></drawable>
    <drawable name="bluetooth.png"></drawable>
    <drawable name="data.png"></drawable>
    <drawable name="general.png"></drawable>
    <drawable name="misc.png"></drawable>
    <drawable name="sleep.png"></drawable>
    <drawable name="sync.png"></drawable>
    <drawable name="timers.png"></drawable>
    <drawable name="wifi.png"></drawable>
    -->

</resources>