<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/wifi_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/separator"
            android:textStyle="italic" />

        <CheckBox
            android:id="@+id/checkBoxWifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_wifi" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_wifi_desc" />

        <CheckBox
            android:id="@+id/checkBoxWifiMgr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_wifi_manager" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_wifi_manager_desc" />

        <CheckBox
            android:id="@+id/checkBoxAutoWifiOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_auto_wifi_off" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_auto_wifi_off_desc" />

        <CheckBox
            android:id="@+id/CheckBoxAutoWifiOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_auto_wifi_on" />

        <TextView
            android:id="@+id/TextView07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_auto_wifi_on_desc" />

        <CheckBox
            android:id="@+id/cboxCheckNetConnectionWIfi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_net_conn_wifi" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/check_net_conn_wifi_desc" />
    </LinearLayout>

</ScrollView>