<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/data_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/separator"
            android:textStyle="italic" />

        <CheckBox
            android:id="@+id/checkBoxData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_data" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_data_desc" />

        <CheckBox
            android:id="@+id/checkBoxDataMgr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_data_manager" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4.50"
            android:text="@string/toggle_data_manager_desc" />
        
        <CheckBox
            android:id="@+id/cbDataOffWhenWifiSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_off_when_wifi"/>

        <TextView
            android:id="@+id/cbDataOffWhenWifiDescr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4.50"
            android:text="@string/data_off_when_wifi_desc" />

        <CheckBox
            android:id="@+id/CheckBox2GSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch2G" />

        <TextView
            android:id="@+id/TextView2GSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4.50"
            android:text="@string/switch_desc2G" />
    </LinearLayout>

</ScrollView>