<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


            <TextView
                android:id="@+id/TextView01"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="@string/general_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/separator"
                android:textStyle="italic" />

            <CheckBox
                android:id="@+id/checkBoxDeactivateAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deactivate_service" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deactivate_service_desc" />

            <CheckBox
                android:id="@+id/checkBoxDeactivatePlugged"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deactivate_service_plugged" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deactivate_service__plugged_desc" />
            
                 <CheckBox
            android:id="@+id/checkBoxKeyguardOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/keyguard_off" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/keyguard_off_desc" />

        <CheckBox
            android:id="@+id/checkBoxNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/notification" />

        <TextView
            android:id="@+id/textViewNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/notification_desc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp" >

            <CheckBox
                android:id="@+id/cbBatteryLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battery_level" />

            <EditText
                android:id="@+id/edBatteryLevel"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:ems="10"
                android:inputType="number"
                android:maxEms="2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percentage"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/battery_level_desc" />

            </LinearLayout>
    </ScrollView>

