<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >



    <CheckBox
        android:id="@+id/checkBoxData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:text="@string/toggle_data" />

    <CheckBox
        android:id="@+id/checkBoxDataMgr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBoxData"
        android:layout_below="@+id/checkBoxData"
        android:text="@string/toggle_data_manager" />
    
    <CheckBox
        android:id="@+id/checkBoxWifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_alignLeft="@+id/checkBoxDataMgr"
        android:layout_below="@+id/checkBoxDataMgr"
        android:text="@string/toggle_wifi" />
    
        <CheckBox
        android:id="@+id/checkBoxWifiMgr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_alignLeft="@+id/checkBoxWifi"
        android:layout_below="@+id/checkBoxWifi"
        android:text="@string/toggle_wifi_manager" />
    

    <EditText
        android:id="@+id/editTextTimeOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBoxWifiMgr"
        android:layout_below="@+id/checkBoxWifiMgr"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/time_on" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextTimeOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextTimeOn"
        android:layout_below="@+id/editTextTimeOn"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/time_off" />

    <EditText
        android:id="@+id/editTextInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextTimeOff"
        android:layout_below="@+id/editTextTimeOff"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/interval_check" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/editTextInterval"
        android:layout_marginTop="44dp"
        android:text="@string/button_save" />

</RelativeLayout>
