<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/sync_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/separator"
            android:textStyle="italic" />

        <CheckBox
            android:id="@+id/checkBoxAutoSync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_auto_sync" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_auto_sync_desc" />

        <CheckBox
            android:id="@+id/checkBoxAutoSyncMgr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_auto_sync_manager" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_auto_sync_manager_desc" />
    </LinearLayout>

</ScrollView>